tests/badly_positioned_react/badly_positioned_react.exp
Error ---------------------------------------------------------------------------------------------------- test.js:21:21

Cannot call `create` with `create1<...>(...)` bound to `Component` because inexact object type [1] is incompatible with
exact object type [2] in type argument `P` [3]. [incompatible-exact]

   test.js:21:21
    21| const Foo1 = create(create1<{||}>(Foo));
                            ^^^^^^^^^^^^^^^^^^

References:
   test.js:4:34
     4|   Component: React.ComponentType<{...P, ...{}}>,
                                         ^^^^^^^^^^^^^ [1]
   test.js:21:29
    21| const Foo1 = create(create1<{||}>(Foo));
                                    ^^^^ [2]
   <BUILTINS>/react.js:318:38
   318|   declare export type ComponentType<-P> = React$ComponentType<P>;
                                             ^ [3]



Found 1 error
